# Abraham

./: .gitignore  CMakeLists.txt  Doxyfile.in
docs/: CMakeLists.txt  Doxyfile.in
include/abraham/container/: Array.h  Array.hpp  Dictionary.hpp  Queue.hpp  Stack.hpp  String.hpp  Strings.h
include/abraham/core/: Exception.h  Exception.hpp  Object.h  Object.hpp
include/abraham/logging/: DevelopmentLogger.hpp  Logger.hpp  MultiLogger.hpp  SimpleLogger.hpp
include/abraham/memory/: SharedPtr.hpp  Singleton.h  Singleton.hpp  UniquePtr.hpp
include/abraham/system/: TerminalUtil.hpp
include/abraham/time/: Interval.h  Interval.hpp  Stopwatch.h  Stopwatch.hpp  Timer.h  Timer.hpp
include/abraham/utilities/: Random.hpp  ScopeGuard.hpp  Types.hpp
include/core/: Object.h
lib/: versions.json
lib/googletest-1.8/: README.md  gmock-gtest-main.cc
lib/rlutil/: rlutil.hpp
scripts/cmake/: AbrahamCoverage.cmake
src/: library.h
src/container/: Array.cpp  Dictionary.cpp  Queue.cpp  Stack.cpp  String.cpp  Strings.cpp
src/core/: Exception.cpp  Object.cpp
src/logging/: DevelopmentLogger.cpp  Logger.cpp  MultiLogger.cpp  SimpleLogger.cpp
src/memory/: SharedPtr.cpp  Singleton.cpp  UniquePtr.cpp
src/system/: TerminalUtil.cpp
src/time/: Interval.cpp  Stopwatch.cpp  Timer.cpp
src/utilities/: Random.cpp  ScopeGuard.cpp  Types.cpp
tests/container/: Array_Tests.cpp  Dictionary_Tests.cpp  Queue_Tests.cpp  Stack_Tests.cpp  String_Tests.cpp
tests/core/: Object_Tests.cpp
tests/memory/: SharedPtr_Tests.cpp  Singleton_Tests.cpp  UniquePtr_Tests.cpp
tests/time/: Interval_Tests.cpp  Stopwatch_Tests.cpp  Timer_Tests.cpp
tests/utilities/: Random_Tests.cpp  ScopeGuard_Tests.cpp
